--- a/style.css
+++ b/style.css
@@ -5,6 +5,20 @@
 }
 body{
     background-color: blueviolet;
-    width: 500px;
-    height: 500px;
+}
+.menu{
+    display: flex;
+    justify-content: space-between;
+    list-style: none;
+   
+}
+.box{
+    padding-top: 20px;
+    width: 800px;
+    margin: auto;
+}
+a{
+    text-decoration: none;
+    color: black;
+    font-size: 40px;
 }
